Further changes, added mid event and tests + checkstyle fixes